fixed spacing with javascript onload, and removed script from all but results page

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 #topbar {
+  z-index: 1;
   background-color: #fff;
   position: sticky;
   top: 0;
@@ -23,8 +24,8 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 66%;
-  max-width: 430px;
+  width: 33%;
+  /*max-width: 70%;*/
   transition: 0.25s;
 }
 
@@ -32,6 +33,7 @@ body {
   position: relative;
   text-align: center;
   font-size: 24px;
+  margin-bottom: 2px;
 }
 
 .maindiv {
